--- a/src/app/views/quiz/quiz-start/quiz-start.component.styl
+++ b/src/app/views/quiz/quiz-start/quiz-start.component.styl
@@ -13,8 +13,13 @@
   }
   .card-body {
     .quiz-form {
-      p {
+      label, input {
         margin: 0;
+        cursor: pointer;
+
+        &[disabled] {
+          cursor: disabled;
+        }
       }
     }
   }
