--- a/src/variables.styl
+++ b/src/variables.styl
@@ -5,6 +5,8 @@ $green = #8DC26F;
 $green-disabled = #cbe3be;
 $red = #e74c3c;
 $gray = #dedede;
+$blue = #396afc;
+$blue-disabled = #a2bdff;
 
 /*
   GENERAL
