--- a/src/app/views/quiz/question/question.component.styl
+++ b/src/app/views/quiz/question/question.component.styl
@@ -27,7 +27,7 @@
     .question-answer {
       height: auto;
 
-      .answer {
+      .answer, .section {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
