--- a/src/app/views/quiz/question-list/components/question-item/question-item.component.styl
+++ b/src/app/views/quiz/question-list/components/question-item/question-item.component.styl
@@ -29,4 +29,12 @@
   .add-handle {
     margin-left: 10px;
   }
+
+  .question-section {
+    label {
+      height: 20px;
+      line-height: 20px;
+      margin: 0 0 0 15px;
+    }
+  }
 }
