--- a/src/app/views/quiz/quiz-start/quiz-start.component.html
+++ b/src/app/views/quiz/quiz-start/quiz-start.component.html
@@ -11,19 +11,47 @@
       </div>
         <div class="card-body">
           <div class="container">
-            <ng-container *ngIf="questions.length > 0">
-              <p class="card-text" [innerHTML]="'quiz.start.description' | translate:{number: questions.length }"></p>
+            <ng-container *ngIf="quizService.filteredQuestions && quizService.filteredQuestions.length > 0">
+              <p class="card-text" [innerHTML]="'quiz.start.description' | translate:{number: quizService.filteredQuestions.length }"></p>
             </ng-container>
-            <ng-container *ngIf="questions.length < 1">
+            <ng-container *ngIf="!quizService.filteredQuestions">
               <p class="card-text">{{ 'quiz.start.loading' | translate }}</p>
             </ng-container>
+            <ng-container *ngIf="quizService.filteredQuestions && quizService.filteredQuestions.length < 1">
+              <p class="card-text">{{ 'quiz.start.sections.noQuestions' | translate }}</p>
+            </ng-container>
             <div class="quiz-form">
+
+              <ng-container *ngIf="sections && sections.length > 0">
+                <form class="question-form" [formGroup]="sectionForm">
+                  <p class="card-text">{{ 'quiz.start.sections.label' | translate }}</p>
+                  <div class="container quiz-sections">
+                    <div class="quiz-section"
+                         formArrayName="sections"
+                         *ngFor="let section of sectionForm.get('sections').controls; let i = index">
+                      <div class="row section"
+                           [formGroupName]="i">
+                        <div class="col-xs-1">
+                          <input type="checkbox"
+                                 class="form-control"
+                                 formControlName="isChecked"
+                                 name="section-{{i}}"
+                                 id="section-{{i}}">
+                        </div>
+                        <div class="col-xs-11 text-left">
+                          <label for="section-{{i}}"
+                                 class="card-text">
+                            {{ section.value.title }}
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </ng-container>
+
               <p class="card-text">{{ 'quiz.start.options.label' | translate }}</p>
               <div class="container">
-                <!--<div class="row quiz-show-progress">-->
-                  <!--<div class="col-xs-1"><input type="checkbox" id="showProgress" name="showProgress" disabled="disabled" ngModel></div>-->
-                  <!--<div class="col-xs-11 text-left"><label for="showProgress" disabled="disabled">{{ 'quiz.start.options.trackProgress' | translate }}</label></div>-->
-                <!--</div>-->
                 <div class="row quiz-random">
                   <div class="col-xs-1"><input type="checkbox" id="randomQuestions" name="randomQuestions" ngModel></div>
                   <div class="col-xs-11 text-left"><label for="randomQuestions">{{ 'quiz.start.options.randomQuestions' | translate }}</label></div>
@@ -38,11 +66,11 @@
         </div>
         <div class="card-footer text-center">
           <ng-container *ngIf="quizService && quizService.quizStarted">
-            <button class="btn btn-default text-center float-left" type="submit" (click)="onQuizStart()" [disabled]="!questions">{{ 'quiz.start.toolbar.startAgain' | translate }}</button>
-            <button class="btn btn-success text-center float-right" type="button" (click)="onQuizResume()" [disabled]="!questions">{{ 'quiz.start.toolbar.resumeQuiz' | translate }}</button>
+            <button class="btn btn-default text-center float-left" type="submit" (click)="onQuizStart()" [disabled]="!quizService.filteredQuestions">{{ 'quiz.start.toolbar.startAgain' | translate }}</button>
+            <button class="btn btn-success text-center float-right" type="button" (click)="onQuizResume()" [disabled]="!quizService.filteredQuestions">{{ 'quiz.start.toolbar.resumeQuiz' | translate }}</button>
           </ng-container>
           <ng-container *ngIf="quizService && !quizService.quizStarted">
-            <button class="btn btn-success text-center" type="submit" [disabled]="!questions">{{ 'quiz.start.toolbar.startQuiz' | translate }}</button>
+            <button class="btn btn-success text-center" type="submit" [disabled]="!quizService.filteredQuestions">{{ 'quiz.start.toolbar.startQuiz' | translate }}</button>
           </ng-container>
         </div>
     </div>
