--- a/src/app/views/quiz/quiz-start/quiz-start.component.styl
+++ b/src/app/views/quiz/quiz-start/quiz-start.component.styl
@@ -13,6 +13,10 @@
   }
   .card-body {
     .quiz-form {
+      .quiz-sections {
+        margin-bottom: 15px;
+      }
+
       label, input {
         margin: 0;
         cursor: pointer;
