--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -18,7 +18,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <ng-template [ngIf]="!authService.isAuthenticated()">
-            <li class="nav-item"><a class="nav-link" [routerLink]="'/' + i18nRouting.auth.signup">{{ 'navbar.register' | translate }}</a></li>
+            <li class="nav-item" *ngIf="allowRegistrations"><a class="nav-link" [routerLink]="'/' + i18nRouting.auth.signup">{{ 'navbar.register' | translate }}</a></li>
             <li class="nav-item"><a class="nav-link" [routerLink]="'/' + i18nRouting.auth.signin">{{ 'navbar.login' | translate }}</a></li>
           </ng-template>
           <li class="nav-item"
