--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -2,7 +2,7 @@
   <app-slanted><h3>{{ 'auth.signin.title' | translate}}</h3></app-slanted>
   <div class="card">
     <div class="card-body">
-      <form (ngSubmit)="onSignin(f)" #f="ngForm">
+      <form #f="ngForm">
         <div class="form-group">
           <label for="email">{{ 'auth.signin.email' | translate}}</label>
           <input type="text" id="email" name="email" class="form-control" ngModel>
@@ -11,7 +11,11 @@
           <label for="password">{{ 'auth.signin.password' | translate}}</label>
           <input type="password" id="password" name="password" class="form-control" ngModel>
         </div>
-        <button class="btn btn-primary" type="submit">{{ 'auth.signin.toolbar.login' | translate}}</button>
+        <button class="btn btn-primary"
+                type="submit"
+                (click)="onSignin(f)">
+            {{ 'auth.signin.toolbar.login' | translate}}
+        </button>
       </form>
     </div>
   </div>
