--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,7 +2,7 @@
   <app-slanted><h3>{{ 'auth.signup.title' | translate}}</h3></app-slanted>
   <div class="card">
     <div class="card-body">
-      <form (ngSubmit)="onSignup(f)" #f="ngForm">
+      <form #f="ngForm">
         <div class="form-group">
           <label for="email">{{ 'auth.signup.email' | translate}}</label>
           <input type="text" id="email" name="email" class="form-control" ngModel>
@@ -11,7 +11,11 @@
           <label for="password">{{ 'auth.signup.password' | translate}}</label>
           <input type="password" id="password" name="password" class="form-control" ngModel>
         </div>
-        <button class="btn btn-primary" type="submit">{{ 'auth.signup.toolbar.register' | translate}}</button>
+        <button class="btn btn-primary"
+                type="submit"
+                (click)="onSignup(f)">
+          {{ 'auth.signup.toolbar.register' | translate}}
+        </button>
       </form>
     </div>
   </div>
